--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
+  "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
-  "main": "./dist/index.js",
   "bin": {
-    "cr-asst": "./dist/cli.js"
+    "cr-asst": "./dist/cli.cjs"
   },
   "files": [
     "dist"
@@ -32,7 +31,7 @@
   "scripts": {
     "cli": "tsx src/cli.ts",
     "cli:watch": "tsx watch src/cli.ts",
-    "build": "tsup --format esm --dts --clean src/index.ts src/cli.ts && cp -r src/prompts dist/prompts",
+    "build": "unbuild",
     "test": "vitest",
     "test:cover": "vitest --coverage",
     "check": "run-p check:*",
@@ -57,10 +56,10 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.2",
     "taze": "^18.6.0",
-    "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.25.0",
+    "unbuild": "^3.5.0",
     "vitest": "^3.0.7"
   },
   "pnpm": {
