--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "test": "vitest",
     "test:cover": "vitest --coverage",
     "check": "run-p check:*",
+    "check:type": "tsc --noEmit",
     "check:lint": "eslint .",
     "check:format": "prettier --check .",
     "taze": "taze -I",
-    "bump": "bumpp"
+    "prepare": "simple-git-hooks",
+    "release": "bumpp"
   },
   "dependencies": {
     "commander": "^13.1.0",
@@ -53,8 +55,10 @@
     "bump": "^0.2.5",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
+    "lint-staged": "^15.4.3",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.2",
+    "simple-git-hooks": "^2.11.1",
     "taze": "^18.6.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
@@ -65,6 +69,15 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
+    ]
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm check:type && pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": [
+      "eslint --fix .",
+      "prettier --write ."
     ]
   }
 }
