--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "simple-git-hooks"
     ]
   },
   "simple-git-hooks": {
