feat!: get diffs by new option `diffsCmd`
Remove options `diffSrc`, `diffDst` and `excludePaths`

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cli:watch": "tsx watch src/cli.ts",
     "build": "unbuild",
     "test": "vitest run",
+    "test:watch": "vitest watch",
     "test:cover": "vitest run --coverage",
     "check": "run-p check:*",
     "check:type": "tsc --noEmit",
