--- a/package.json
+++ b/package.json
@@ -18,17 +18,11 @@
     "LLM",
     "CI/CD"
   ],
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.mjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "bin": {
-    "cr-asst": "./dist/cli/index.cjs"
+    "cr-asst": "dist/cli/index.mjs"
   },
   "files": [
     "dist"
