ci: only upload coverage reports once

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         run: pnpm run test:cover
 
       - name: Upload coverage reports to Codecov
+        if: ${{ matrix.node-version == '22' && matrix.os == 'ubuntu-latest' }}
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
