chore: update scripts

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dist"
   ],
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks",
     "cli": "tsx src/cli/index.ts",
     "cli:watch": "tsx watch src/cli/index.ts",
     "build": "unbuild",
@@ -39,7 +41,6 @@
     "check:lint": "eslint .",
     "check:format": "prettier --check .",
     "taze": "taze -I",
-    "prepare": "simple-git-hooks",
     "release": "bumpp"
   },
   "dependencies": {
