Revert "chore: update scripts"
This reverts commit 41d9199047074c045ab97a59d8fed0659e828065.

--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "dist"
   ],
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "postinstall": "simple-git-hooks",
     "cli": "tsx src/cli/index.ts",
     "cli:watch": "tsx watch src/cli/index.ts",
     "build": "unbuild",
@@ -41,6 +39,7 @@
     "check:lint": "eslint .",
     "check:format": "prettier --check .",
     "taze": "taze -I",
+    "prepare": "simple-git-hooks",
     "release": "bumpp"
   },
   "dependencies": {
