--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "release": "bumpp"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "ai": "^4.3.16",
     "commander": "^14.0.0",
     "dotenv": "^17.0.1",
-    "execa": "9.3.1",
-    "openai": "^5.8.2"
+    "execa": "9.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
