--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "release": "bumpp"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/deepseek": "^0.2.14",
+    "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/xai": "^1.2.16",
     "ai": "^4.3.16",
     "commander": "^14.0.0",
     "dotenv": "^17.0.1",
