--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ai": "^4.3.16",
     "commander": "^14.0.0",
     "dotenv": "^17.0.1",
-    "execa": "9.3.1"
+    "execa": "9.3.1",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
