--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commander": "^14.0.0",
     "dotenv": "^17.0.1",
     "execa": "9.3.1",
+    "undici": "^7.11.0",
     "zod": "^3.25.74"
   },
   "devDependencies": {
