--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "commander": "^14.0.0",
     "dotenv": "^17.2.1",
     "execa": "9.3.1",
-    "undici": "^7.13.0",
+    "undici": "7.12.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
