--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/xai": "^2.0.0",
     "ai": "^5.0.0",
+    "chalk": "^5.5.0",
     "commander": "^14.0.0",
     "dotenv": "^17.2.1",
     "execa": "9.3.1",
