--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ai": "^5.0.0",
     "chalk": "^5.5.0",
     "commander": "^14.0.0",
+    "core-js": "^3.45.0",
     "dotenv": "^17.2.1",
     "execa": "9.3.1",
     "undici": "7.12.0",
@@ -76,6 +77,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "core-js",
       "esbuild",
       "simple-git-hooks"
     ]
